--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,16 +6,18 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-16.04'
-
 strategy:
   matrix:
-    jdk10:
+    jdk10_linux:
+      imageName: "ubuntu-16.04"
       jdk_version: "1.10"
-    jdk11:
+    jdk11_windows:
+      imageName: "vs2017-win2016"
       jdk_version: "1.11"
   maxParallel: 2
+
+pool:
+  vmImage: $(imageName)
 
 steps:
 - task: Maven@3
